# consumer-complaints-mlops

./: .coverage  .flake8  .gitignore  =2.15.0  Makefile  README.md  USERGUIDE.md  app.py  app_v1.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_project.sh  test_model.py
.github/workflows/: deploy.yml  mlops-pipeline.yml  monitor.yml  simple-ci.yml  train.yml
consumer_complaints_mlops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: deployment.md  setup.md  training.md
models/: label_mapping.json  model_comparison.csv  model_metadata.json  test_cases.json
models/trained/: metadata.json
src/data/: loader.py
src/evaluation/: check_drift.py  check_metrics.py  class_mapping.json  model_classes.txt
src/models/: bert_classifier.py  model_loader.py  use_classifier.py
src/training/: train copy.py  train.py  train_original.py  training.py
test_models/: model.keras
tests/: conftest.py
tests/smoke/: test_endpoint.py
tests/unit/: test_models.py
