[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = "consumer-complaints-mlops"
version = "0.1.0"
description = "MLOps pipeline for consumer complaints classification"
requires-python = ">=3.10"
dependencies = [
    "tensorflow>=2.15.0",
    "tensorflow-hub>=0.15.0",
    "tensorflow-text>=2.15.0",
    "google-cloud-aiplatform>=1.38.0",
    "google-cloud-bigquery>=3.13.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]